feat: PN-101533-ctb_index-corrections-remove-members-from-schedule-api-id-5907
